✨ PIC-2020: Accept hearingId on extended case endpoint (#708)
* 🚚 PIC-2023: Rename CourtCaseEntity to HearingEntity

* 🚚 PIC-2023: Complete refactoring of Hearing/CourtCaseEntity into separate classes

* 🚚 PIC-2010: Filter for courtCode in subquery for efficiency

* 🚚 PIC-2023: Add indexes to hearing_day court_code and hearing created

* 🚚 PIC-2023: Rename courtCase Fields to hearing where appropriate

* 🚚 PIC-2023: Undo redundant delombok

* 🚚 PIC-2023: Undo redundant delombok

* 🚚 PIC-2023: Extract first_created as field in hearing table

* ✨ PIC-2020: Accept hearingId at extended case endpoint and persist if present

* ✨ PIC-2020: Fetch existing hearings by hearingId instead of caseId